...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/view_green"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="#05A505"
            android:clickable="true"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="24dp"
...
